added service, controller, dtos, mapper files for project and task